# Device-Asset-Management

./: .gitignore  README.md  pyproject.toml
src/deviceassetmanagement/: manage.py
src/deviceassetmanagement/device/: admin.py  models.py  urls.py  views.py
src/deviceassetmanagement/device/migrations/: 0001_initial.py
src/deviceassetmanagement/device/templates/device/: index.html
src/deviceassetmanagement/device/templates/device/includes/: device_list.html  pagination.html  search_form.html
src/deviceassetmanagement/deviceassetmanagement/: asgi.py  security.py  settings.py  urls.py  wsgi.py
src/deviceassetmanagement/static/deviceassetmanagement/css/: style.css
src/deviceassetmanagement/templates/: base.html
src/deviceassetmanagement/templates/includes/: footer.html  navbar.html
