[project]
name = "deviceassetmanagement"
version = "0.1.0"
description = ""
authors = [
    {name = "d1vinel3af",email = "d1vinel3af@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "deviceassetmanagement", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
