[project]
name = "deviceassetmanagement"
version = "0.1.0"
description = ""
authors = [
    {name = "d1vinel3af",email = "d1vinel3af@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0,<7.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "deviceassetmanagement", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
